GNOME Bugzilla – Bug 721137
reader: Fix example code for json_reader_read_member()
Last modified: 2014-02-03 14:12:01 UTC
.
Created attachment 264940 [details] [review] reader: Fix example code for json_reader_read_member() Fix cut'n'paste error.
Review of attachment 264940 [details] [review]: looks good.
Attachment 264940 [details] pushed as 440f735 - reader: Fix example code for json_reader_read_member()