reader: Fix example code for json_reader_read_member()

Fix cut'n'paste error.

https://bugzilla.gnome.org/show_bug.cgi?id=721137